erDiagram
    USERS ||--o{ OAUTH_ACCOUNTS : "has"
    USERS ||--o{ REFRESH_TOKENS : "issues"

    USERS {
        uuid id PK
        citext email UK
        string hashed_password
        string role "admin/ai_developer/end_user"
        bool is_active
        bool is_verified
        timestamptz last_login_at
    }
    OAUTH_ACCOUNTS {
        uuid id PK
        uuid user_id FK
        string provider "google"
        string provider_subject
        text access_token_encrypted
    }
    REFRESH_TOKENS {
        uuid id PK
        uuid user_id FK
        string token_hash
        timestamptz expires_at
        timestamptz revoked_at
        uuid replaced_by_id FK
        inet ip
    }
